css/style.css
/* FONTS */

@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

/* GLOBAL STYLES */
h1 {
  font-size: 36px;
}

:root {
  --font-primary: 'Poppins', sans-serif;
  --font-secondary: 'Arvo', serif;
  --font-code: 'Roboto', monospace;
  --bg-color: #000000;
  --font-color: #ffffff;
  --btn-bg-color: #ffffff;
  --accent-color: #be7efe;
  --header-shadow: #000 0px 0px 5px;
}

/* #be7efe */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--bg-color);
  display: flex;
  flex-flow: column;
  height: 50vh;
  color: var(--font-color);
  font-family: var(--font-primary);
 
}
.jumbotron .container{
  z-index:1;
}
.container {
  display: flex;
  flex-direction: column;
  max-width: 960px;
  margin: 0 auto;
  padding: 1rem 2rem;
  height: 12vh;
  z-index:1;
}

.container_countdown {
  display: flex;
  flex-direction: column;
  max-width: 960px;
  margin: 0 auto;
  padding: 1rem 2rem;
  z-index:1;
}

/* HEADER */

header {
  box-shadow: var(--header-shadow);
  max-width: 940px;
  margin: 0 auto;
  padding: 0 10px;
  text-align: center;
}

header .container {
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  z-index:1;
  
}

.menu {
  display: flex;
  gap: 2rem;
  align-items: center;
  z-index:1;
}

/* BUTTONS */

.btn {
  display: inline-block;
  padding: 1rem 2rem;
  background: var(--btn-bg-color);
  color: var(--accent-color);
  font-family: var(--font-secondary);
  font-style: italic;
  font-weight: bold;
  font-size: 1rem;
  text-transform: capitalize;
  transition: all 0.3s ease;
  box-shadow: 4px 4px 0 0 var(--accent-color);
  cursor: pointer;
  position: relative;
  text-decoration: none;
  outline: none;
}
.btn:hover {
  box-shadow: none;
}

.wallet-btn {
  border-radius: 5rem;
  margin-left: 2rem;
  border-color: transparent;
}

.hero-btn {
  border-radius: 4px;
  font-size: 1.2rem;
  padding: 1.5rem 3rem;
}



/* COUNTDOWN SECTION */

section {
  flex: 1 1 auto;
}

.countdown {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.countdown ul {
  display: flex;
  gap: 2rem
}
.countdown .clock-item {
  list-style: none;
  width: 70px;
  height: auto;
}
.countdown .clock-item .count-number {
  z-index: 1;
  background: var(--accent-color);
  color: var(--font-color);
  font-size: 2rem;
  font-weight: 700;
  font-family: var(--font-secondary);
  padding: 1rem;
  display: inline-block;
  width: 100%;
  text-align: center;
  line-height: 1;
  border-radius: 4px 4px 0 0;
}
.countdown .clock-item .count-text {
  background: var(--btn-bg-color);
  font-family: var(--font-secondary);
  font-size: 1.1rem;
  color: var(--bg-color);
  padding: 0.5rem 0.7rem;
  display: inline-block;
  width: 100%;
  text-align: center;
  line-height: 1;
  border-radius: 0 0 4px 4px;
}

.countdown h1 {
  text-shadow: 2px 2px 0 var(--accent-color);
  font-style: italic;
  margin: 2rem 0;
  font-size: 3.5rem;
  text-align: center;
}

.countdown p {
  font-size: 1.1rem;
  font-family: var(--font-secondary);
  margin-bottom: 2rem;
  text-align: center;
}

/* OWNER STYLES */

.owner-status {
  font-size: 2rem;
  text-align: center;
}

/* MEDIA QUERIES */

@media screen and (max-width: 768px) {
  .menu {
    gap: 1rem;
  }
  .wallet-btn {
    margin-left: 0;
    padding: 1rem;
    max-width: 8rem;
  }
  .countdown h1 {
    font-size: 2rem;
  }
  .countdown p {
    font-size: 1rem;
  }
  .header{
    font-size: 1rem;
  }
  .container{
    font-size: 1rem;
  }
}
 
/*images under welcome*/
.row {
  display: flex;
  flex-wrap: wrap;
  flex: 50%;
  max-width: 50%;
  padding: 0px;
  width: 50%;
  display: block;
 
 
}
.column {
  display: flex;
  flex-wrap: wrap;
  flex: 50%;
  max-width: 50%;
  margin: auto 7px;
  padding: 0px;
  display: inline-block;
  display:block;
}

.center {
  display: block;
  margin: 0 auto;
  width: 50%;
  padding: 0 4px;

  
}

.centerImage{
  position: center;
  height: 250px;
  width: 250px;
}
.omega_wolves_text {
  height: 250px;
  width: 250px;
  left: 1000px;
  float: left;
}

.inline-block {
  display: inline-block;
  border: none;
}

.middle{
  position:center;
}


.container_footer {
  max-width: 940px;
  margin: 0 auto;
  padding: 0 10px;
  text-align: center;
}

footer p {
  font-family: 'Raleway', sans-serif;
  text-transform: uppercase;
  font-size: 11px;
}

footer {
  background-color: #333;
  color: #fff;
  padding: 30px 0;
}

header {
  /* background-color: #333333; */
  position: relative;
  width: 100%;
  height:25%;
  z-index:0;
}

.row .image-container img{
  display: inline-block;
  width: 50%;
}

.gallery {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 20px;
  display: inline-block;
}

.gallery-item {
  margin: 20px;
}

.gallery-item .thumbnail {
  width: 240px;
  border: 2px solid GhostWhite;
  border-radius: 4px;
}
.center_logo{
  display:center;
}

.text_color{
  color: #fff;
  display: inline-block;

}

.road_map h3{
  color:#be7efe;
}

.jumbotron {
  height: 750px;
  background-image: url("https://ipfs.io/ipfs/bafybeiefqcno2wjs23tmuezdpdwljdv73pzirozsfj7f27s2s3vrudg5ea");
  z-index: 0;
  top: 100px;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

